# netpack-installer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: renovate.json
.github/workflows/: linting.yaml
custom_plugins/netpack_installer/: __init__.py  manifest.json
custom_plugins/rh_template/: __init__.py  manifest.json
